Fix search results z-index and slider image in responsive

--- a/src/assets/styles/04-components/header.scss
+++ b/src/assets/styles/04-components/header.scss
@@ -19,10 +19,6 @@
     @apply text-[color:var(--topnav-text-color)];
   }
 
-  .header-search{
-    @apply relative z-10;
-  }
-
   .s-search-input{
     @apply bg-gray-200/50 hover:bg-gray-200/70 border-none;
   }
